fix: align cta with text on desktop view

--- a/assets/styles/components/cta.scss
+++ b/assets/styles/components/cta.scss
@@ -6,6 +6,10 @@
 		display: flex;
 		justify-content: center;
 		align-items: center;
+		// align CTA with text on desktop
+		@include screen(medium) {
+			align-items: start;
+		}
 		flex-direction: column;
 		text-align: center;
 		margin-bottom: 40px;
